# rce

Code/: CMakeLists.txt  Makefile  README.MD  Run.sh  rce  send_csv.sh  send_image.sh
Code/CSV_files/: Dados_2021_4_151.csv  Dados_2021_4_152.csv  Dados_2021_4_154.csv  Dados_2021_4_155.csv  Dados_2021_4_156.csv  Dados_2021_4_157.csv  Dados_2021_4_158.csv  Dados_2021_4_159.csv  Dados_2021_4_160.csv  Dados_2021_4_162.csv  Dados_2021_4_164.csv  Dados_2021_4_165.csv  Dados_2021_4_166.csv  Dados_2021_4_167.csv  Dados_2021_4_169.csv  Dados_2021_4_171.csv  Dados_2021_4_172.csv  Dados_2021_4_173.csv  Dados_2021_4_174.csv  Dados_2021_4_184.csv  Dados_2021_4_185.csv  Dados_2021_4_187.csv  Dados_2021_4_189.csv  Dados_2021_4_193.csv  Dados_2021_4_195.csv  Dados_2021_4_197.csv  Dados_2021_4_201.csv  Dados_2021_4_202.csv  Dados_2021_4_204.csv  Dados_2021_4_206.csv  Dados_2021_4_208.csv  Dados_2021_5_151.csv  Dados_2021_5_153.csv  Dados_2021_5_156.csv  Dados_2021_5_158.csv  Dados_2021_5_159.csv  Dados_2021_5_161.csv  Dados_2021_5_162.csv  Dados_2021_5_167.csv  Dados_2021_5_168.csv  (+28 more)
Code/include/: takepic.h
Code/lib/src/: detector.cc
Code/sample/: CMakeLists.txt
Code/sample/src/: main.cpp
Code/src/: main.c  takepic.c
